--- a/composer.json
+++ b/composer.json
@@ -15,8 +15,7 @@
   },
   "config": {
     "bin-dir": "bin",
-    "optimize-autoloader": true,
-    "platform": {"php": "5.6"}
+    "optimize-autoloader": true
   },
   "keywords": [
     "mustache",
@@ -26,12 +25,12 @@
     "yii2"
   ],
   "require": {
-    "php": ">=5.5.0",
-    "mustache/mustache": "^2.9.0",
-    "yiisoft/yii2": "^2.0.6"
+    "php": ">=7.0.0",
+    "mustache/mustache": "^2.10.0",
+    "yiisoft/yii2": "^2.0.7"
   },
   "require-dev": {
-    "phpunit/phpunit": "^5.1.4"
+    "phpunit/phpunit": "^5.2.10"
   },
   "support": {
     "issues": "https://github.com/cedx/mustache.yii/issues"
