Fixing the CI: dependencies not installed

--- a/.travis.yml
+++ b/.travis.yml
@@ -4,9 +4,10 @@ language: php
 env: YII_ENV="test"
 sudo: false
 
-before_install:
+install:
 - composer config --global github-oauth.github.com $GITHUB_ACCESS_TOKEN
 - composer global require "fxp/composer-asset-plugin"
+- composer install --no-interaction
 
-script: ./vendor/bin/phpunit
-after_script: ./vendor/bin/codacycoverage clover var/coverage.xml
+script: vendor/bin/phpunit
+after_script: vendor/bin/codacycoverage clover var/coverage.xml
