--- a/composer.json
+++ b/composer.json
@@ -27,18 +27,20 @@
   ],
   "require": {
     "php": ">=7.0.0",
+    "ext-json": "*",
+    "ext-mbstring": "*",
+    "ext-pcre": "*",
     "mustache/mustache": "^2.11.1",
     "yiisoft/yii2": "^2.0.11"
   },
   "require-dev": {
+    "cedx/coveralls": "^0.1.0",
     "phing/phing": "^2.16.0",
     "phpdocumentor/phpdocumentor": "^2.9.0",
-    "phpmd/phpmd": "^2.6.0",
-    "phpunit/phpunit": "^5.7.12",
-    "satooshi/php-coveralls": "^1.0.1"
+    "phpunit/phpunit": "^6.0.6"
   },
   "scripts": {
-    "coverage": "coveralls --coverage_clover=var/coverage.xml",
+    "coverage": "coveralls --file=var/coverage.xml",
     "test": "phpunit"
   },
   "support": {
