--- a/composer.json
+++ b/composer.json
@@ -31,6 +31,7 @@
     "ext-mbstring": "*",
     "ext-pcre": "*",
     "mustache/mustache": "^2.11.1",
+    "psr/log": "^1.0.2",
     "yiisoft/yii2": "^2.0.11"
   },
   "require-dev": {
