--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
   "description": "Mustache templating for the Yii Framework.",
   "homepage": "https://github.com/cedx/yii2-mustache",
-  "license": "Apache-2.0",
+  "license": "MIT",
   "name": "cedx/yii2-mustache",
   "type": "yii2-extension",
   "authors": [{
@@ -23,6 +23,7 @@
   ],
   "require": {
     "php": ">=7.0.0",
+    "ext-intl": "*",
     "ext-json": "*",
     "ext-mbstring": "*",
     "ext-pcre": "*",
