--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,5 +1,5 @@
-site_name: TODO
-site_description: TODO
+site_name: Mustache for Yii
+site_description: Mustache templating for the Yii, high-performance PHP framework.
 site_author: Cédric Belin - cedric@belin.io
 site_url: https://cedx.github.io/yii2-mustache
 
@@ -10,7 +10,7 @@ repo_name: GitHub
 repo_url: https://github.com/cedx/yii2-mustache
 edit_uri: ''
 
-copyright: Copyright &copy; TODO Cédric Belin
+copyright: Copyright &copy; 2014 - 2018 Cédric Belin
 google_analytics:
 - !!python/object/apply:os.getenv [GOOGLE_ANALYTICS_ID]
 - auto
