--- a/composer.json
+++ b/composer.json
@@ -37,7 +37,7 @@
   },
   "scripts": {
     "coverage": "coveralls var/coverage.xml",
-    "test": "phpunit --colors=auto --verbose"
+    "test": "phpunit"
   },
   "support": {
     "docs": "https://dev.belin.io/yii2-mustache/api",
