--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,5 +1,5 @@
 site_name: Mustache for Yii
-site_description: Mustache templating for the Yii, high-performance PHP framework.
+site_description: Mustache templating for Yii, high-performance PHP framework.
 site_author: Cédric Belin - cedric@belin.io
 site_url: https://dev.belin.io/yii2-mustache
 
@@ -29,7 +29,7 @@ markdown_extensions:
 pages:
 - Overview: index.md
 - Installation: installation.md
-#- Usage: TODO.md
+- Usage: usage.md
 - About:
   - Changelog: about/changelog.md
   - License: about/license.md
