--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -31,6 +31,12 @@
       "label": "robo : upgrade",
       "problemMatcher": [],
       "type": "shell"
+    },
+    {
+      "command": "robo watch",
+      "label": "robo : watch",
+      "problemMatcher": [],
+      "type": "shell"
     }
   ]
 }
