--- a/composer.json
+++ b/composer.json
@@ -35,11 +35,11 @@
     "yiisoft/yii2": "^2.0.15"
   },
   "require-dev": {
-    "cedx/coveralls": "^9.0.1",
+    "cedx/coveralls": "^9.1.2",
     "consolidation/robo": "^1.3.1",
     "henrikbjorn/lurker": "^1.2.0",
     "phpstan/phpstan": "^0.10.5",
-    "phpunit/phpunit": "^7.4.3"
+    "phpunit/phpunit": "^7.4.4"
   },
   "scripts": {
     "coverage": "robo coverage",
@@ -47,6 +47,6 @@
   },
   "support": {
     "docs": "https://dev.belin.io/yii2-mustache/api",
-    "issues": "https://github.com/cedx/yii2-mustache/issues"
+    "issues": "https://git.belin.io/cedx/yii2-mustache/issues"
   }
 }
