Updated the bug tracker link

--- a/composer.json
+++ b/composer.json
@@ -47,6 +47,6 @@
   },
   "support": {
     "docs": "https://dev.belin.io/yii2-mustache/api",
-    "issues": "https://git.belin.io/cedx/yii2-mustache/issues"
+    "issues": "https://github.com/cedx/yii2-mustache/issues"
   }
 }
