--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
     "psr-4": {"yii\\mustache\\": "test/"}
   },
   "config": {
+    "fxp-asset": {"enabled": false},
     "optimize-autoloader": true
   },
   "keywords": [
@@ -24,6 +25,9 @@
     "templating",
     "view",
     "yii2"
+  ],
+  "repositories": [
+    {"type": "composer", "url": "https://asset-packagist.org"}
   ],
   "require": {
     "php": ">=7.2.0",
@@ -36,7 +40,7 @@
   },
   "require-dev": {
     "cedx/coveralls": "^9.1.2",
-    "consolidation/robo": "^1.3.4",
+    "consolidation/robo": "^1.4.0",
     "henrikbjorn/lurker": "^1.2.0",
     "phpstan/phpstan": "^0.10.7",
     "phpunit/phpunit": "^7.5.1"
