--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,10 @@
-dist: trusty
+dist: xenial
 language: php
 notifications: {email: false}
-php: '7.2'
-sudo: false
+php: ['7.2', '7.3']
 
 install:
 - composer config --global github-oauth.github.com $GITHUB_ACCESS_TOKEN
-- composer global require "fxp/composer-asset-plugin"
 - composer install --no-interaction
 
 script: composer test
