--- a/composer.json
+++ b/composer.json
@@ -17,8 +17,7 @@
   },
   "config": {
     "fxp-asset": {"enabled": false},
-    "optimize-autoloader": true,
-    "preferred-install": {"*": "dist"}
+    "optimize-autoloader": true
   },
   "keywords": [
     "mustache",
@@ -43,7 +42,7 @@
     "cedx/coveralls": "^9.1.2",
     "consolidation/robo": "^1.4.3",
     "henrikbjorn/lurker": "^1.2.0",
-    "phpstan/phpstan": "^0.10.7",
+    "phpstan/phpstan": "^0.10.8",
     "phpunit/phpunit": "^7.5.1"
   },
   "scripts": {
