Updated the VSCode tasks

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -8,6 +8,12 @@
       "type": "shell"
     },
     {
+      "command": "robo coverage",
+      "label": "robo : coverage",
+      "problemMatcher": [],
+      "type": "shell"
+    },
+    {
       "command": "robo doc",
       "label": "robo : doc",
       "problemMatcher": [],
@@ -29,6 +35,12 @@
     {
       "command": "robo upgrade",
       "label": "robo : upgrade",
+      "problemMatcher": [],
+      "type": "shell"
+    },
+    {
+      "command": "robo version",
+      "label": "robo : version",
       "problemMatcher": [],
       "type": "shell"
     },
