--- a/composer.json
+++ b/composer.json
@@ -36,14 +36,14 @@
     "ext-mbstring": "*",
     "ext-pcre": "*",
     "mustache/mustache": "^2.13.0",
-    "psr/log": "^1.1.2",
-    "yiisoft/yii2": "^2.0.32"
+    "psr/log": "^1.1.3",
+    "yiisoft/yii2": "^2.0.34"
   },
   "require-dev": {
     "cedx/coveralls": "^12.0.0",
-    "cedx/phpunit-expect": "^0.10.0",
     "consolidation/robo": "^2.0.3",
-    "phpstan/phpstan": "^0.12.18"
+    "phpstan/phpstan": "^0.12.18",
+    "phpunit/phpunit": "^9.0.1"
   },
   "scripts": {
     "coverage": "robo coverage",
