--- a/etc/phpstan.neon
+++ b/etc/phpstan.neon
@@ -1,6 +1,4 @@
 parameters:
+  ignoreErrors: ['/on an unknown class Yii/']
   level: max
   paths: [../lib, ../test]
-  ignoreErrors:
-    - '/on a separate line does not do anything/'
-    - '/on an unknown class Yii/'
