--- a/etc/phpstan.neon
+++ b/etc/phpstan.neon
@@ -1,4 +1,4 @@
 parameters:
-  ignoreErrors: ['/on an unknown class Yii/']
+  autoload_files: [../vendor/yiisoft/yii2/Yii.php]
   level: max
   paths: [../src, ../test]
