--- a/composer.json
+++ b/composer.json
@@ -4,6 +4,7 @@
   "license": "MIT",
   "name": "cedx/yii2-mustache",
   "type": "yii2-extension",
+  "version": "10.1.0",
   "authors": [
     {"email": "cedric@belin.io", "homepage": "https://belin.io", "name": "Cédric Belin"}
   ],
@@ -41,7 +42,6 @@
   },
   "require-dev": {
     "cedx/coveralls": "^13.0.0",
-    "consolidation/robo": "^2.0.3",
     "phpstan/phpstan": "^0.12.23",
     "phpunit/phpunit": "^9.1.4"
   },
